[package]
name = "tiengviet"
version = "1.0.0"
edition = "2021"
description = "Convert vietnamese sign to unsign easily like eat 🥞🥞🥞."
readme = "README.md"
homepage = "https://github.com/tvc12/tiengviet-rust"
repository = "https://github.com/tvc12/tiengviet-rust"
authors = ["Thien Vi Chi <thienvc12.it@gmail.com>"]
license = "MIT@tvc12"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
